<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#9cc8d4"
    android:layout_height="match_parent"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="27">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/dino1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title: DinoSaurs"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:textColor="#000000"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Play"
            android:id="@+id/playButton"
            android:backgroundTint="#fff"
            android:paddingRight="10dp"
            android:textSize="20dp"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:background="#FFFFFF">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/subjectTopic"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:background="#FFFFFF">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/timeDuration"
        android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:background="#FFFFFF">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/timeDuration"
                android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:background="#FFFFFF">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/subjectDescription"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>